5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_2426.log
== SUBMITION (2019-03-26 10:22:31) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d,('km com') L,('litros'))

-- EXECUTION TIME:
0.188939
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 7
    print(d,('km com') L,('litros'))
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:33) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d,('km com') L,('litros'))

-- ERROR:
File "XXXX", line 7
    print(d,('km com') L,('litros'))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:00) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d,'km com' L,'litros')

-- EXECUTION TIME:
0.138058
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 7
    print(d,'km com' L,'litros')
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:02) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d,'km com' L,'litros')

-- ERROR:
File "XXXX", line 7
    print(d,'km com' L,'litros')
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:11) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d,'km com', L,'litros')

-- EXECUTION TIME:
0.243915
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2426/main.py", line 3, in <module>
    L = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:24:49) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d 'com um litro')

-- EXECUTION TIME:
0.14973
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 7
    print(d 'com um litro')
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:24:57) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d ,'com um litro')

-- EXECUTION TIME:
0.137818
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2426/main.py", line 3, in <module>
    L = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:24:59) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade média ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d ,'com um litro')

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:19) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
L = float(input("quantidade de litros?"))

d = V/T

print(d ,'com um litro')

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    L = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:25:33) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = V/T

print(d ,'com um litro')

-- OUTPUT:
11.11111111111111 com um litro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:26:13) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = V/T

print((round(d, 1) ,'com um litro')

-- EXECUTION TIME:
0.144343
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 8
    
                                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:15) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = V/T

print((round(d, 1) ,'com um litro')

-- ERROR:
File "XXXX", line 8
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:26:22) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = V/T

print((round(d, 1) ,'com um litro'))

-- OUTPUT:
(11.1, 'com um litro')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:26:32) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = V/T

print((round(d, 1) ,'com um litro'))

-- EXECUTION TIME:
0.130433
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
(11.1, 'com um litro')
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
(24.0, 'com um litro')
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
(66.7, 'com um litro')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:27:37) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V

print((round(d, 1) ,'com um litro'))

-- OUTPUT:
(900.0, 'com um litro')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:27:46) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V

print((round(d, 1) ,'com um litro'))

-- EXECUTION TIME:
0.146832
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
(900.0, 'com um litro')
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
(600.0, 'com um litro')
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
(96.0, 'com um litro')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:24) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V

print((round(d, 1) ,com um litro))

-- EXECUTION TIME:
0.150635
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 7
    print((round(d, 1) ,com um litro))
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:28:45) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V

print((round(d, 1) ,'com um litro'))

-- EXECUTION TIME:
0.170007
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
(900.0, 'com um litro')
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
(600.0, 'com um litro')
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
(96.0, 'com um litro')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:28:47) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V

print((round(d, 1) ,'com um litro'))

-- OUTPUT:
(900.0, 'com um litro')
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:29:54) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))


d = T * V
L = d/T
print((round(d, 1) , L))

-- OUTPUT:
(900.0, 100.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:39) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1) , L))

-- OUTPUT:
(900.0, 75.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:42) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1) , L))

-- EXECUTION TIME:
0.176371
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
(900.0, 75.0)
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
(600.0, 50.0)
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
(96.0, 8.0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:44) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1) , L))

-- OUTPUT:
(900.0, 75.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:35:02) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1) , L))

-- EXECUTION TIME:
0.143754
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
(900.0, 75.0)
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
(600.0, 50.0)
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
(96.0, 8.0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:35:30) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1))
print(L)		

-- EXECUTION TIME:
0.127756
-- ERROR:
  File "/home/codebench/codes/1593/2426/main.py", line 8
    print(L)		
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:35:31) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1))
print(L)		

-- ERROR:
File "XXXX", line 8
    print(L)		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:36:18) 
-- CODE:
T = float(input("tempo gasto em uma viagem?"))
V = float(input("velocidade media ? "))
A = float(12)

d = T * V
L = d/A
print((round(d, 1)))
print(L)		

-- EXECUTION TIME:
0.181036
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:37:53) 
-- CODE:
t = float(input("insira o tempo: "))
v = float(input("insira a velocidade: "))
a = 12

d = v * t 
l = d * a
print(d)
print(l)

-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:38:25) 
-- CODE:
t = float(input("insira o tempo: "))
v = float(input("insira a velocidade: "))
a = 12

d = v * t 
l = d/a
print(d)
print(l)

-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:38:40) 
-- CODE:
t = float(input("insira o tempo: "))
v = float(input("insira a velocidade: "))
a = 12

d = v * t 
l = d/a
print(d)
print(l)

-- EXECUTION TIME:
0.193714
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
